--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -1,3 +1,10 @@
+html {
+  background: url("../Images/turbines.gif") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 body {
   background-image: url("../Images/turbines.gif");
