--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -5,10 +5,6 @@ body {
   background-size: cover;
 }
 
-img {
-  opacity: 0.5;
-}
-
 h1.a {
   text-align: center;
 }
@@ -16,4 +12,9 @@ h1.a {
 .top_label {
   background-color: silver;
   border: 1px solid black;
+  top: 20px;
+}
+
+nav {
+  border-style: solid;
 }
