--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -3,6 +3,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 h1.a {
@@ -17,7 +19,7 @@ h1.a {
 
 nav {
   border-style: solid;
-  background-color: grey;
+  background-color: blue;
 }
 
 .pull-left {
