--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -36,3 +36,60 @@ footer {
 .nav-item {
   padding-right: 30px;
 }
+table, td, th {
+            border: solid 3px black;
+            border-collapse: collapse
+        }
+        td{
+            padding: 4px;
+        }
+        table{
+            width: 100%;
+            max-width: 500px;
+        }
+        th{
+            text-align: left;
+        }
+        thead, tfoot{
+            background-color: grey;
+            color: white
+        }
+        tbody>tr:hover{
+            background-color: grey;
+        }
+        p{
+            text-align: center;
+        }
+        th[role=columnheader]:not(.no-sort) {
+        	cursor: pointer;
+        }
+
+        th[role=columnheader]:not(.no-sort):after {
+        	content: '';
+        	float: right;
+        	margin-top: 7px;
+        	border-width: 0 4px 4px;
+        	border-style: solid;
+        	border-color: #404040 transparent;
+        	visibility: hidden;
+        	opacity: 0;
+        	-ms-user-select: none;
+        	-webkit-user-select: none;
+        	-moz-user-select: none;
+        	user-select: none;
+        }
+
+        th[aria-sort=ascending]:not(.no-sort):after {
+        	border-bottom: none;
+        	border-width: 4px 4px 0;
+        }
+
+        th[aria-sort]:not(.no-sort):after {
+        	visibility: visible;
+        	opacity: 0.4;
+        }
+
+        th[role=columnheader]:not(.no-sort):hover:after {
+        	visibility: visible;
+        	opacity: 1;
+        }
