--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -93,3 +93,13 @@ table, td, th {
         tbody>tr:hover{
             background-color: lightpink;
         }
+
+        a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    padding: 10px;
+
+    text-decoration: none;
+    color: initial;
+}
