--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -26,15 +26,22 @@ nav {
   border-style: solid;
   background-color: powderblue;
 }
+
 header {
   border-style: solid;
   background-color: powderblue;
 }
+
 footer {
   border-style: solid;
   background-color: powderblue;
   padding-top: 10px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
+
 .pull-left {
   float: left !important;
 }
@@ -42,70 +49,76 @@ footer {
 .nav-item {
   padding-right: 30px;
 }
+
 th[role=columnheader]:not(.no-sort) {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 th[role=columnheader]:not(.no-sort):after {
-	content: '';
-	float: right;
-	margin-top: 7px;
-	border-width: 0 4px 4px;
-	border-style: solid;
-	border-color: #404040 transparent;
-	visibility: hidden;
-	opacity: 0;
-	-ms-user-select: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
+  content: '';
+  float: right;
+  margin-top: 7px;
+  border-width: 0 4px 4px;
+  border-style: solid;
+  border-color: #404040 transparent;
+  visibility: hidden;
+  opacity: 0;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 th[aria-sort=ascending]:not(.no-sort):after {
-	border-bottom: none;
-	border-width: 4px 4px 0;
+  border-bottom: none;
+  border-width: 4px 4px 0;
 }
 
 th[aria-sort]:not(.no-sort):after {
-	visibility: visible;
-	opacity: 0.4;
+  visibility: visible;
+  opacity: 0.4;
 }
+
 th[role=columnheader]:not(.no-sort):hover:after {
-	visibility: visible;
-	opacity: 1;
+  visibility: visible;
+  opacity: 1;
 }
+
 table, td, th {
-            border: solid 3px black;
-            border-collapse: collapse
-        }
-        td{
-            padding: 4px;
-        }
-        table{
-            width: 100%;
+  border: solid 3px black;
+  border-collapse: collapse
+}
 
-        }
-        th{
-            text-align: left;
-        }
-        thead, tfoot{
-            background-color: grey;
-            color: white
+td {
+  padding: 4px;
+}
 
-        }
-        tbody{
-          background-color: rgba(255,255,255,0.55)
-        }
-        tbody>tr:hover{
-            background-color: lightpink;
-        }
+table {
+  width: 100%;
+}
 
-        a.button {
-    -webkit-appearance: button;
-    -moz-appearance: button;
-    appearance: button;
-    padding: 10px;
+th {
+  text-align: left;
+}
 
-    text-decoration: none;
-    color: initial;
+thead, tfoot {
+  background-color: grey;
+  color: white
+}
+
+tbody {
+  background-color: rgba(255, 255, 255, 0.55)
+}
+
+tbody>tr:hover {
+  background-color: lightpink;
+}
+
+a.button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  padding: 10px;
+  text-decoration: none;
+  color: initial;
 }
