Footer and last changes to about us css

--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -119,8 +119,8 @@ a.button {
   color: initial;
 }
 p{
-  color: white;
+  color: cornsilk;
   text-shadow: 1px 1px black;
-  padding: 5px;
-  margin: 5px;
+  
+  margin: 10px;
 }
