--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -6,6 +6,7 @@ main {
   min-width: 100%;
   min-height: 100%;
   padding-bottom: 15px;
+  padding-top: 15px;
 }
 
 main.graph {
@@ -36,6 +37,11 @@ footer {
   border-style: solid;
   background-color: powderblue;
   padding-top: 10px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding-top: 20px;
 }
 
 .pull-left {
