--- a/public/CSS/chart.css
+++ b/public/CSS/chart.css
@@ -125,3 +125,13 @@ p{
   text-shadow: 1px 1px black;
   margin: 12px;
 }
+#contactPoints {
+  color: cornsilk;
+  text-shadow: 1px 1px black;
+  text-align: center;
+}
+#contactInfo {
+  color: white;
+  text-align: center;
+  font-weight: bolder;
+}
